force-app/main/default/objects/Account/fields/Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Count__c</fullName>
    <label>Interaction Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>