force-app/main/default/objects/Account/fields/New_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>New_Text_Area__c</fullName>
    <label>New Text Area</label>
    <type>TextArea</type>
</CustomField>