force-app/main/default/objects/Account/fields/text_text__c.field-meta.xml
<CustomField>
    <fullName>text_text__c</fullName>
    <label>text text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>